# MLLM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/halluprobe_vl/: stats.json
data/halluprobe_vl/probes/: attribute.jsonl  object.jsonl  relation.jsonl
examples/: wrap_demo.py
paper/: FIG1_PROMPT.md  FIG2_PROMPT.md  FIG_PROMPTS.md  PAPER_README.md  build_docx.py  figures.py  pr_curves.json
results/metrics/: detection.json  detection__align_quick.json  detection_specialist__full.json  detection_specialist__smoke.json  discrim_instructblip.json  discrim_llava15.json  discrim_llava16.json  discrim_qwenvl.json
scripts/: download_weights.py
scripts/analysis/: diagnose_detection.py  gap_gdino_vs_clip.py  make_roc_dump_figure.py  revise_ceiling.py
scripts/detectors/: ald_region_crop.py  old_clip_zeroshot.py  rld_box_geometry.py
scripts/discrimination/: cross_backbone_discrim.py  object_gate.py
scripts/halluprobe/: build_halluprobe_obj.py  eval_halluprobe.py
scripts/mitigation/: caption_quality.py  cross_backbone_revise.py  detect_then_revise.py  vcd_baseline.py
scripts/negative_results/: cmota_alignment_prototype.py  cmota_confirm_collapse.py  cmota_train_alignment.py  full_multitype_gate.py  hierarchical_revise_llm_claims.py  hierarchical_revise_parser.py  token_suppression_diff.py  token_suppression_pgd.py  token_suppression_pgd_v2.py
src/cmpsa/: __init__.py  config.py  paths.py  utils.py
src/hgfusion/: __init__.py  wrapper.py
src/hgfusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+45 files in other folders)
