[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hgfusion"
version = "1.0.0"
description = "Plug-and-play hallucination detection & mitigation wrapper for multimodal LLMs (hierarchical grounding fusion)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anonymous (under review)" }]
keywords = ["multimodal", "hallucination", "vision-language", "grounding", "MLLM"]
dependencies = [
    # transformers pinned: 5.x threaded loader segfaults on Windows for several backbones
    "transformers==4.49.0",
    "torch>=2.1",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4",
]

[project.optional-dependencies]
backbones = ["accelerate>=0.26", "transformers_stream_generator>=0.0.4", "tiktoken>=0.5", "einops>=0.7"]
eval = ["pycocoevalcap>=1.2", "pyarrow>=14.0", "tqdm>=4.66"]

[tool.setuptools.packages.find]
where = ["src"]
